Добавляет вторую часть навигации

--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,50 @@
               </li>
             </ul>
           </div>
-
+        </nav>
+        <nav class="header__nav2 nav2">
+          <ul class="nav2__list nav2-list">
+            <li class="nav2-list__item">
+              <a class="nav2-list__link">
+                Каталог запчастей
+              </a>
+            </li>
+            <li class="nav2-list__item">
+              <a class="nav2-list__link">
+                Каталог ТО
+              </a>
+            </li>
+            <li class="nav2-list__item nav2-list__item--current">
+              <a class="nav2-list__link nav2-list__link--current">
+                Шины
+              </a>
+            </li>
+            <li class="nav2-list__item">
+              <a class="nav2-list__link">
+                Диски
+              </a>
+            </li>
+            <li class="nav2-list__item">
+              <a class="nav2-list__link">
+                Аккумуляторы
+              </a>
+            </li>
+            <li class="nav2-list__item">
+              <a class="nav2-list__link">
+                Автомасла
+              </a>
+            </li>
+            <li class="nav2-list__item">
+              <a class="nav2-list__link">
+                Автолампы
+              </a>
+            </li>
+            <li class="nav2-list__item">
+              <a class="nav2-list__link">
+                Аксессуары
+              </a>
+            </li>
+          </ul>
         </nav>
 
       </header>
