Добавляет секцию промо

--- a/source/index.html
+++ b/source/index.html
@@ -154,6 +154,6 @@
       </main>
 
     </div>
-  <script src="js/counter.js"></script>
+  <script src="js/countdown.js"></script>
   </body>
 </html>
