--- a/source/index.html
+++ b/source/index.html
@@ -110,7 +110,7 @@
       <main class="main">
         <section class="promo">
           <h1 class="visually-hidden">Предлагаем запчасти на все виды автомобилей.</h1>
-          <img class="promo__image" src="../img/promo.jpg" width="870" height="397" alt="Фото генератора на фиолетово-орпнжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
+          <img class="promo__image" src="../img/promo.jpg" width="870" height="397" alt="Фото генератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
           <button class="promo__button-left" type="button">
             <span class="visually-hidden">Кнопка назад.</span>
           </button>
@@ -121,7 +121,9 @@
             <span class="promo-wrapper__action">Акция</span>
             <span class="promo-wrapper__new-price">200 ₽</span>
             <span class="promo-wrapper__old-price">500 ₽</span>
-            <img class="promo-wrapper__image" src="../img/lamp.png" width="150" height="187" alt="">
+            <a class="promo-wrapper__link" href="#">
+              <img src="../img/lamp.png" width="150" height="187" alt="Фото лампы на белом фоне">
+            </a>
             <span class="promo-wrapper__name">Лампочка мини...</span>
             <div class="promo-wrapper__timer countdown">
               <span class="countdown__text">До конца акции осталось:</span>
