Добавляет слайдеру все функции

--- a/source/index.html
+++ b/source/index.html
@@ -117,6 +117,7 @@
               <img src="../img/promo.jpg" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
               <img src="../img/promo.jpg" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
               <img src="../img/promo.jpg" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
+              <img src="../img/promo.jpg" width="870" height="397" alt="Фото автогенератора на фиолетово-оранжевом градиенте и надпись: 'Запчасти на все виды автомобилей'.">
             </div>
             <button class="slider__prev-button" type="button">
               <span class="visually-hidden">Кнопка назад.</span>
@@ -124,6 +125,14 @@
             <button class="slider__next-button" type="button">
               <span class="visually-hidden">Кнопка вперёд.</span>
             </button>
+            <div class="slider__dots-wrapper">
+              <div class="slider__dot slider__dot--active"></div>
+              <div class="slider__dot"></div>
+              <div class="slider__dot"></div>
+              <div class="slider__dot"></div>
+              <div class="slider__dot"></div>
+              <div class="slider__dot"></div>
+            </div>
           </div>
           <div class="promo__action action">
 
