Добавляет вертикальный слайдер для блока акций

--- a/source/index.html
+++ b/source/index.html
@@ -134,51 +134,123 @@
               <div class="slider__dot"></div>
             </div>
           </div>
-          <div class="promo__action action">
 
-            <div class="action__item">
-              <h3 class="visually-hidden">Автослайдер с текущими акциями.</h3>
-              <span class="action__name">Акция</span>
-              <span class="action__new-price">200 ₽</span>
-              <span class="action__old-price">500 ₽</span>
-              <a class="action__link" href="#">
-                <span class="visually-hidden">Перейти на страницу товара.</span>
-                <img src="../img/lamp.png" width="150" height="187" alt="Фото лампы на белом фоне">
-              </a>
-              <span class="action__product">Лампочка мини...</span>
-              <div class="action__timer countdown">
-                <span class="countdown__text">До конца акции осталось:</span>
-                <div class="countdown__wrapper">
-                  <div class="countdown__item">
-                    <span id="days">00</span>
-                    <span class="countdown__label">дней</span>
+          <div class="promo__action action-slider">
+            <h3 class="visually-hidden">Автослайдер с текущими акциями.</h3>
+            <div class="action__slider">
+
+              <div class="action__item action">
+                <span class="action__name">Акция</span>
+                <span class="action__new-price">200 ₽</span>
+                <span class="action__old-price">500 ₽</span>
+                <a class="action__link" href="#">
+                  <span class="visually-hidden">Перейти на страницу товара.</span>
+                  <img src="../img/lamp.png" width="150" height="187" alt="Фото лампы на белом фоне">
+                </a>
+                <span class="action__product">Лампочка мини...</span>
+                <div class="action__timer countdown">
+                  <span class="countdown__text">До конца акции осталось:</span>
+                  <div class="countdown__wrapper">
+                    <div class="countdown__item">
+                      <span id="days">00</span>
+                      <span class="countdown__label">дней</span>
+                    </div>
+                    <div class="countdown__item">
+                      <span id="hours">00</span>
+                      <span>:</span>
+                      <span class="countdown__label">часов</span>
+                    </div>
+                    <div class="countdown__item">
+                      <span id="minutes">00</span>
+                      <span>:</span>
+                      <span class="countdown__label">минут</span>
+                    </div>
+                    <div class="countdown__item">
+                      <span id="seconds">00</span>
+                      <span class="countdown__label">секунд</span>
+                    </div>
                   </div>
-                  <div class="countdown__item">
-                    <span id="hours">00</span>
-                    <span>:</span>
-                    <span class="countdown__label">часов</span>
+                </div>
+              </div>
+
+              <div class="action__item action">
+                <span class="action__name">Акция</span>
+                <span class="action__new-price">400 ₽</span>
+                <span class="action__old-price">700 ₽</span>
+                <a class="action__link" href="#">
+                  <span class="visually-hidden">Перейти на страницу товара.</span>
+                  <img src="../img/lamp.png" width="150" height="187" alt="Фото лампы на белом фоне">
+                </a>
+                <span class="action__product">Лампочка макси...</span>
+                <div class="action__timer countdown-2">
+                  <span class="countdown__text">До конца акции осталось:</span>
+                  <div class="countdown__wrapper">
+                    <div class="countdown__item">
+                      <span id="days-2">00</span>
+                      <span class="countdown__label">дней</span>
+                    </div>
+                    <div class="countdown__item">
+                      <span id="hours-2">00</span>
+                      <span>:</span>
+                      <span class="countdown__label">часов</span>
+                    </div>
+                    <div class="countdown__item">
+                      <span id="minutes-2">00</span>
+                      <span>:</span>
+                      <span class="countdown__label">минут</span>
+                    </div>
+                    <div class="countdown__item">
+                      <span id="seconds-2">00</span>
+                      <span class="countdown__label">секунд</span>
+                    </div>
                   </div>
-                  <div class="countdown__item">
-                    <span id="minutes">00</span>
-                    <span>:</span>
-                    <span class="countdown__label">минут</span>
-                  </div>
-                  <div class="countdown__item">
-                    <span id="seconds">00</span>
-                    <span class="countdown__label">секунд</span>
+                </div>
+              </div>
+
+              <div class="action__item action">
+                <span class="action__name">Акция</span>
+                <span class="action__new-price">300 ₽</span>
+                <span class="action__old-price">600 ₽</span>
+                <a class="action__link" href="#">
+                  <span class="visually-hidden">Перейти на страницу товара.</span>
+                  <img src="../img/lamp.png" width="150" height="187" alt="Фото лампы на белом фоне">
+                </a>
+                <span class="action__product">Лампочка миди...</span>
+                <div class="action__timer countdown-3">
+                  <span class="countdown__text">До конца акции осталось:</span>
+                  <div class="countdown__wrapper">
+                    <div class="countdown__item">
+                      <span id="days-3">00</span>
+                      <span class="countdown__label">дней</span>
+                    </div>
+                    <div class="countdown__item">
+                      <span id="hours-3">00</span>
+                      <span>:</span>
+                      <span class="countdown__label">часов</span>
+                    </div>
+                    <div class="countdown__item">
+                      <span id="minutes-3">00</span>
+                      <span>:</span>
+                      <span class="countdown__label">минут</span>
+                    </div>
+                    <div class="countdown__item">
+                      <span id="seconds-3">00</span>
+                      <span class="countdown__label">секунд</span>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-
-
           </div>
         </section>
 
       </main>
     </div>
 
-  <script src="js/slider.js"></script>
+  <script src="js/promo-slider.js"></script>
+  <script src="js/action-slider.js"></script>
   <script src="js/countdown.js"></script>
+  <script src="js/countdown-2.js"></script>
+  <script src="js/countdown-3.js"></script>
   </body>
 </html>
