Добавляет изменения после остановки таймера

--- a/source/index.html
+++ b/source/index.html
@@ -173,7 +173,7 @@
                 </div>
               </div>
 
-              <div class="action__item action">
+              <div class="action__item action-2">
                 <span class="action__name">Акция</span>
                 <span class="action__new-price">400 ₽</span>
                 <span class="action__old-price">700 ₽</span>
@@ -207,7 +207,7 @@
                 </div>
               </div>
 
-              <div class="action__item action">
+              <div class="action__item action-3">
                 <span class="action__name">Акция</span>
                 <span class="action__new-price">300 ₽</span>
                 <span class="action__old-price">600 ₽</span>
