Изменяет логику слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -244,6 +244,10 @@
           </div>
         </section>
 
+        <section class="search">
+          <h1>Здесь будет поиск</h1>
+        </section>
+
       </main>
     </div>
 
