Добавляет смену активной группы в меню

--- a/source/index.html
+++ b/source/index.html
@@ -60,44 +60,44 @@
               </li>
             </ul>
           </div>
-          <ul class="nav__list-goods nav-list-goods">
-            <li class="nav-list-goods__item">
-              <a class="nav-list-goods__link">
+          <ul class="nav__list-goods list-goods">
+            <li class="list-goods__item goods">
+              <a class="goods__link">
                 Каталог запчастей
               </a>
             </li>
-            <li class="nav-list-goods__item">
-              <a class="nav-list-goods__link">
+            <li class="list-goods__item goods">
+              <a class="goods__link">
                 Каталог ТО
               </a>
             </li>
-            <li class="nav-list-goods__item nav-list-goods__item--current">
-              <a class="nav-list-goods__link nav-list-goods__link--current">
+            <li class="list-goods__item goods">
+              <a class="goods__link goods__link--current">
                 Шины
               </a>
             </li>
-            <li class="nav-list-goods__item">
-              <a class="nav-list-goods__link">
+            <li class="list-goods__item goods">
+              <a class="goods__link">
                 Диски
               </a>
             </li>
-            <li class="nav-list-goods__item">
-              <a class="nav-list-goods__link">
+            <li class="list-goods__item goods">
+              <a class="goods__link">
                 Аккумуляторы
               </a>
             </li>
-            <li class="nav-list-goods__item">
-              <a class="nav-list-goods__link">
+            <li class="list-goods__item goods">
+              <a class="goods__link">
                 Автомасла
               </a>
             </li>
-            <li class="nav-list-goods__item">
-              <a class="nav-list-goods__link">
+            <li class="list-goods__item goods">
+              <a class="goods__link">
                 Автолампы
               </a>
             </li>
-            <li class="nav-list-goods__item">
-              <a class="nav-list-goods__link">
+            <li class="list-goods__item goods">
+              <a class="goods__link">
                 Аксессуары
               </a>
             </li>
@@ -251,6 +251,7 @@
       </main>
     </div>
 
+  <script src="js/nav-goods.js"></script>
   <script src="js/promo-slider.js"></script>
   <script src="js/action-slider.js"></script>
   <script src="js/countdown.js"></script>
