Добавляет список поиска

--- a/source/index.html
+++ b/source/index.html
@@ -245,7 +245,23 @@
         </section>
 
         <section class="search">
-          <h1>Здесь будет поиск</h1>
+          <h3 class="visually-hidden">Поиск</h3>
+            <div class="search__wrapper">
+              <ul class="search__list list">
+                <li class="list__item item">
+                  <a class="item__link">Поиск по Vin</a>
+                </li>
+                <li class="list__item item">
+                  <a class="item__link item__link--active">Поиск по марке</a>
+                </li>
+                <li class="list__item item">
+                  <a class="item__link">Поиск по названию товара</a>
+                </li>
+                <li class="list__item item">
+                  <a class="item__link">Поиск по partnamber</a>
+                </li>
+              </ul>
+            </div>
         </section>
 
       </main>
